--- a/Jupyter_Notebook.ipynb
+++ b/Jupyter_Notebook.ipynb
@@ -36,15 +36,17 @@
    "metadata": {},
    "source": [
     "**List of Data Science Languages:**\n",
-    "    - Python\n",
-    "    - R\n",
-    "    - SQL\n",
-    "    - Scala\n",
-    "    - C++\n",
-    "    - Julia\n",
-    "    - JavaScript\n",
-    "    - Php\n",
-    "    - Ruby"
+    "1. Python\n",
+    "2. R\n",
+    "3. SQL\n",
+    "4. Scala\n",
+    "5. C++\n",
+    "6. Julia\n",
+    "7. JavaScript\n",
+    "8. PHP\n",
+    "9. Ruby\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -52,14 +54,14 @@
    "metadata": {},
    "source": [
     "**List of Data Science Libraries:**\n",
-    "    - Pandas\n",
-    "    - NumPy\n",
-    "    - Matplotlib\n",
-    "    - Seaborn\n",
-    "    - Scikit learn\n",
-    "    - keras\n",
-    "    - TensorFlow\n",
-    "    - Pytorch"
+    "1. Pandas\n",
+    "2. NumPy\n",
+    "3. Matplotlib\n",
+    "4. Seaborn\n",
+    "5. Scikit-learn\n",
+    "6. Keras\n",
+    "7. TensorFlow\n",
+    "8. PyTorch"
    ]
   },
   {
