--- a/Jupyter_Notebook.ipynb
+++ b/Jupyter_Notebook.ipynb
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Author:**\n",
+    "**Author:**\n\n",
     "Dinesh S\n"
    ]
   }
