--- a/Jupyter_Notebook.ipynb
+++ b/Jupyter_Notebook.ipynb
@@ -70,13 +70,13 @@
    "source": [
     "## Data Science Tools\n",
     "\n",
-    "| Category              | Tools                                                                 |\n",
-    "|-----------------------|----------------------------------------------------------------------|\n",
-    "| **Data Manipulation** | Pandas, NumPy, Dplyr                                                 |\n",
-    "| **Data Integration**  | Apache Nifi, Talend, Microsoft Power Query                           |\n",
-    "| **Data Visualization**| Matplotlib, Seaborn, Tableau, Power BI                               |\n",
-    "| **Model Building**    | Scikit-learn, TensorFlow, PyTorch, XGBoost                           |\n",
-    "| **Model Deployment**  | Flask, FastAPI, IBM Watson Machine Learning, AWS SageMaker           |\n"
+    "| Data Science Tools    |\n",
+    "|-----------------------|\n",
+    "| Anaconda              |\n",
+    "| Jupyter Notebook      |\n",
+    "| RStudio               |\n",
+    "| Spyder                |\n",
+    "| Zeppelin              |\n"
    ]
   },
   {
